2005-01-02  Geoff Norton  <gnorton@customerdna.com>
	* cocoa-sharp.pc.in: Version bump for 0.2-pre
	* auto*: Updates to drop the 0.1 glue from the build
	* generator: Update to emit interfaces properly and clean up the Inspector code again

svn path=/trunk/cocoa-sharp/; revision=38245

--- a/src/Apple.AppKit/Makefile.am
+++ b/src/Apple.AppKit/Makefile.am
@@ -1,536 +1,20 @@
 TARGET = $(ASSEMBLY)
 ASSEMBLY_NAME=Apple.AppKit
 ASSEMBLY=$(ASSEMBLY_NAME).dll
-CLEANFILES=$(ASSEMBLY) cocoa-sharp.snk
+CLEANFILES=$(ASSEMBLY) *.cs cocoa-sharp.snk
 DISTCLEANFILES=AssemblyInfo.cs
 noinst_DATA=$(ASSEMBLY) $(ASSEMBLY).config
 EXTRA_DIST= \
 	$(ASSEMBLY).config \
 	AssemblyInfo.cs.in \
-	_BCFlags.cs \
-	_BCFlags2.cs \
-	_Brflags.cs \
-	_CFlags.cs \
-	_giflags.cs \
-	_MFlags.cs \
-	_MVFlags.cs \
-	_OVFlags.cs \
-	_SBIFlags.cs \
-	_SFlags.cs \
-	_SPFlags.cs \
-	_TvFlags.cs \
-	_VFlags.cs \
-	IBOutlet.cs \
-	INSChangeSpelling.cs \
-	INSColorPickingCustom.cs \
-	INSColorPickingDefault.cs \
-	INSDraggingInfo.cs \
-	INSGlyphStorage.cs \
-	INSIgnoreMisspelledWords.cs \
-	INSInputServerMouseTracker.cs \
-	INSInputServiceProvider.cs \
-	INSMenuItem.cs \
-	INSTextAttachmentCell.cs \
-	INSTextInput.cs \
-	INSToolbarItemValidations.cs \
-	INSUserInterfaceValidations.cs \
-	INSValidatedToobarItem.cs \
-	INSValidatedUserInterfaceItem.cs \
-	NSActionCell.cs \
-	NSAffineTransform.cs \
-	NSAffineTransformStruct.cs \
-	NSAlert.cs \
-	NSAlertStyle.cs \
-	NSAnimationEffect.cs \
-	NSAppleScriptAppKitExtras.cs \
-	NSApplication.cs \
-	NSApplicationDelegateReply.cs \
-	NSApplicationTerminateReply.cs \
-	NSArrayController.cs \
-	NSATSTypesetter.cs \
-	NSAttributedStringAppKitExtras.cs \
-	NSBackingStoreType.cs \
-	NSBezelStyle.cs \
-	NSBezierPath.cs \
-	NSBezierPathElement.cs \
-	NSBitmapImageFileType.cs \
-	NSBitmapImageRep.cs \
-	NSBorderType.cs \
-	NSBox.cs \
-	NSBoxType.cs \
-	NSBrowser.cs \
-	NSBrowserCell.cs \
-	NSBrowserColumnResizingType.cs \
-	NSBundleAppKitExtras.cs \
-	NSButton.cs \
-	NSButtonCell.cs \
-	NSButtonType.cs \
-	NSCachedImageRep.cs \
-	NSCell.cs \
-	NSCellAttribute.cs \
-	NSCellImagePosition.cs \
-	NSCellStateValue.cs \
-	NSCellType.cs \
-	NSCharacterCollection.cs \
-	NSClipView.cs \
-	NSCoderAppKitExtras.cs \
-	NSColor.cs \
-	NSColorList.cs \
-	NSColorPanel.cs \
-	NSColorPicker.cs \
-	NSColorWell.cs \
-	NSComboBox.cs \
-	NSComboBoxCell.cs \
-	NSCompositingOperation.cs \
-	NSConcreteTextStorage.cs \
-	NSControl.cs \
-	NSController.cs \
-	NSControlSize.cs \
-	NSControlTint.cs \
-	NSCursor.cs \
-	NSCustomImageRep.cs \
-	NSDocument.cs \
-	NSDocumentChangeType.cs \
-	NSDocumentController.cs \
-	NSDrawer.cs \
-	NSDrawerState.cs \
-	NSEPSImageRep.cs \
-	NSEvent.cs \
-	NSEventType.cs \
-	NSFileWrapper.cs \
-	NSFindPanelAction.cs \
-	NSFocusRingType.cs \
-	NSFont.cs \
-	NSFontAction.cs \
-	NSFontDescriptor.cs \
-	NSFontManager.cs \
-	NSFontPanel.cs \
-	NSForm.cs \
-	NSFormCell.cs \
-	NSGlyph.cs \
-	NSGlyphGenerator.cs \
-	NSGlyphInfo.cs \
-	NSGlyphInscription.cs \
-	NSGlyphLayoutMode.cs \
-	NSGlyphRelation.cs \
-	NSGradientType.cs \
-	NSGraphicsContext.cs \
-	NSHelpManager.cs \
-	NSImage.cs \
-	NSImageAlignment.cs \
-	NSImageCacheMode.cs \
-	NSImageCell.cs \
-	NSImageFrameStyle.cs \
-	NSImageInterpolation.cs \
-	NSImageLoadStatus.cs \
-	NSImageRep.cs \
-	NSImageScaling.cs \
-	NSImageView.cs \
-	NSInputManager.cs \
-	NSInputServer.cs \
-	NSInterfaceStyle.cs \
-	NSLayoutDirection.cs \
-	NSLayoutManager.cs \
-	NSLayoutStatus.cs \
-	NSLineBreakMode.cs \
-	NSLineCapStyle.cs \
-	NSLineJoinStyle.cs \
-	NSLineMovementDirection.cs \
-	NSLineSweepDirection.cs \
-	NSMatrix.cs \
-	NSMatrixMode.cs \
-	NSMenu.cs \
-	NSMenuItem.cs \
-	NSMenuItemCell.cs \
-	NSMenuView.cs \
-	NSMovie.cs \
-	NSMovieView.cs \
-	NSMultibyteGlyphPacking.cs \
-	NSMutableAttributedStringAppKitExtras.cs \
-	NSMutableParagraphStyle.cs \
-	NSNib.cs \
-	NSNibConnector.cs \
-	NSNibControlConnector.cs \
-	NSNibOutletConnector.cs \
-	NSObjectAppKitExtras.cs \
-	NSObjectController.cs \
-	NSOpenGLContext.cs \
-	NSOpenGLContextParameter.cs \
-	NSOpenGLPixelBuffer.cs \
-	NSOpenGLPixelFormat.cs \
-	NSOpenGLPixelFormatAttribute.cs \
-	NSOpenGLView.cs \
-	NSOpenPanel.cs \
-	NSOutlineView.cs \
-	NSPageLayout.cs \
-	NSPanel.cs \
-	NSParagraphStyle.cs \
-	NSPasteboard.cs \
-	NSPDFImageRep.cs \
-	NSPICTImageRep.cs \
-	NSPopUpArrowPosition.cs \
-	NSPopUpButton.cs \
-	NSPopUpButtonCell.cs \
-	NSPrinter.cs \
-	NSPrinterTableStatus.cs \
-	NSPrintInfo.cs \
-	NSPrintingOrientation.cs \
-	NSPrintingPageOrder.cs \
-	NSPrintingPaginationMode.cs \
-	NSPrintOperation.cs \
-	NSPrintPanel.cs \
-	NSProgressIndicator.cs \
-	NSProgressIndicatorStyle.cs \
-	NSProgressIndicatorThickness.cs \
-	NSQTMovieLoopMode.cs \
-	NSQuickDrawView.cs \
-	NSRequestUserAttentionType.cs \
-	NSResponder.cs \
-	NSRulerMarker.cs \
-	NSRulerOrientation.cs \
-	NSRulerView.cs \
-	NSSaveOperationType.cs \
-	NSSavePanel.cs \
-	NSScreen.cs \
-	NSScrollArrowPosition.cs \
-	NSScroller.cs \
-	NSScrollerArrow.cs \
-	NSScrollerPart.cs \
-	NSScrollView.cs \
-	NSSearchField.cs \
-	NSSearchFieldCell.cs \
-	NSSecureTextField.cs \
-	NSSecureTextFieldCell.cs \
-	NSSegmentedCell.cs \
-	NSSegmentedControl.cs \
-	NSSegmentSwitchTracking.cs \
-	NSSelectionAffinity.cs \
-	NSSelectionDirection.cs \
-	NSSelectionGranularity.cs \
-	NSShadow.cs \
-	NSSimpleHorizontalTypesetter.cs \
-	NSSlider.cs \
-	NSSliderCell.cs \
-	NSSliderType.cs \
-	NSSound.cs \
-	NSSpeechRecognizer.cs \
-	NSSpeechSynthesizer.cs \
-	NSSpellChecker.cs \
-	NSSplitView.cs \
-	NSStatusBar.cs \
-	NSStatusItem.cs \
-	NSStepper.cs \
-	NSStepperCell.cs \
-	NSStringAppKitExtras.cs \
-	NSTableColumn.cs \
-	NSTableHeaderCell.cs \
-	NSTableHeaderView.cs \
-	NSTableView.cs \
-	NSTableViewDropOperation.cs \
-	NSTabState.cs \
-	NSTabView.cs \
-	NSTabViewItem.cs \
-	NSTabViewType.cs \
-	NSText.cs \
-	NSTextAlignment.cs \
-	NSTextAttachment.cs \
-	NSTextAttachmentCell.cs \
-	NSTextContainer.cs \
-	NSTextField.cs \
-	NSTextFieldBezelStyle.cs \
-	NSTextFieldCell.cs \
-	NSTextStorage.cs \
-	NSTextTab.cs \
-	NSTextTabType.cs \
-	NSTextView.cs \
-	NSTickMarkPosition.cs \
-	NSTIFFCompression.cs \
-	NSTitlePosition.cs \
-	NSToolbar.cs \
-	NSToolbarDisplayMode.cs \
-	NSToolbarItem.cs \
-	NSToolbarSizeMode.cs \
-	NSTypesetter.cs \
-	NSTypesetterBehavior.cs \
-	NSTypeSetterGlyphInfo.cs \
-	NSURLAppKitExtras.cs \
-	NSUsableScrollerParts.cs \
-	NSUserDefaultsController.cs \
-	NSView.cs \
-	NSWindingRule.cs \
-	NSWindow.cs \
-	NSWindowButton.cs \
-	NSWindowController.cs \
-	NSWindowDepth.cs \
-	NSWindowMask.cs \
-	NSWindowOrderingMode.cs \
-	NSWorkspace.cs \
-	NSWritingDirection.cs 
+	*.cs
 
 references = /r:../Apple.Foundation/Apple.Foundation.dll
 
 sources= \
-	_BCFlags.cs \
-	_BCFlags2.cs \
-	_Brflags.cs \
-	_CFlags.cs \
-	_giflags.cs \
-	_MFlags.cs \
-	_MVFlags.cs \
-	_OVFlags.cs \
-	_SBIFlags.cs \
-	_SFlags.cs \
-	_SPFlags.cs \
-	_TvFlags.cs \
-	_VFlags.cs \
-	IBOutlet.cs \
-	INSChangeSpelling.cs \
-	INSColorPickingCustom.cs \
-	INSColorPickingDefault.cs \
-	INSDraggingInfo.cs \
-	INSGlyphStorage.cs \
-	INSIgnoreMisspelledWords.cs \
-	INSInputServerMouseTracker.cs \
-	INSInputServiceProvider.cs \
-	INSMenuItem.cs \
-	INSTextAttachmentCell.cs \
-	INSTextInput.cs \
-	INSToolbarItemValidations.cs \
-	INSUserInterfaceValidations.cs \
-	INSValidatedToobarItem.cs \
-	INSValidatedUserInterfaceItem.cs \
-	NSActionCell.cs \
-	NSAffineTransform.cs \
-	NSAffineTransformStruct.cs \
-	NSAlert.cs \
-	NSAlertStyle.cs \
-	NSAnimationEffect.cs \
-	NSAppleScriptAppKitExtras.cs \
-	NSApplication.cs \
-	NSApplicationDelegateReply.cs \
-	NSApplicationTerminateReply.cs \
-	NSArrayController.cs \
-	NSATSTypesetter.cs \
-	NSAttributedStringAppKitExtras.cs \
-	NSBackingStoreType.cs \
-	NSBezelStyle.cs \
-	NSBezierPath.cs \
-	NSBezierPathElement.cs \
-	NSBitmapImageFileType.cs \
-	NSBitmapImageRep.cs \
-	NSBorderType.cs \
-	NSBox.cs \
-	NSBoxType.cs \
-	NSBrowser.cs \
-	NSBrowserCell.cs \
-	NSBrowserColumnResizingType.cs \
-	NSBundleAppKitExtras.cs \
-	NSButton.cs \
-	NSButtonCell.cs \
-	NSButtonType.cs \
-	NSCachedImageRep.cs \
-	NSCell.cs \
-	NSCellAttribute.cs \
-	NSCellImagePosition.cs \
-	NSCellStateValue.cs \
-	NSCellType.cs \
-	NSCharacterCollection.cs \
-	NSClipView.cs \
-	NSCoderAppKitExtras.cs \
-	NSColor.cs \
-	NSColorList.cs \
-	NSColorPanel.cs \
-	NSColorPicker.cs \
-	NSColorWell.cs \
-	NSComboBox.cs \
-	NSComboBoxCell.cs \
-	NSCompositingOperation.cs \
-	NSConcreteTextStorage.cs \
-	NSControl.cs \
-	NSController.cs \
-	NSControlSize.cs \
-	NSControlTint.cs \
-	NSCursor.cs \
-	NSCustomImageRep.cs \
-	NSDocument.cs \
-	NSDocumentChangeType.cs \
-	NSDocumentController.cs \
-	NSDrawer.cs \
-	NSDrawerState.cs \
-	NSEPSImageRep.cs \
-	NSEvent.cs \
-	NSEventType.cs \
-	NSFileWrapper.cs \
-	NSFindPanelAction.cs \
-	NSFocusRingType.cs \
-	NSFont.cs \
-	NSFontAction.cs \
-	NSFontDescriptor.cs \
-	NSFontManager.cs \
-	NSFontPanel.cs \
-	NSForm.cs \
-	NSFormCell.cs \
-	NSGlyph.cs \
-	NSGlyphGenerator.cs \
-	NSGlyphInfo.cs \
-	NSGlyphInscription.cs \
-	NSGlyphLayoutMode.cs \
-	NSGlyphRelation.cs \
-	NSGradientType.cs \
-	NSGraphicsContext.cs \
-	NSHelpManager.cs \
-	NSImage.cs \
-	NSImageAlignment.cs \
-	NSImageCacheMode.cs \
-	NSImageCell.cs \
-	NSImageFrameStyle.cs \
-	NSImageInterpolation.cs \
-	NSImageLoadStatus.cs \
-	NSImageRep.cs \
-	NSImageScaling.cs \
-	NSImageView.cs \
-	NSInputManager.cs \
-	NSInputServer.cs \
-	NSInterfaceStyle.cs \
-	NSLayoutDirection.cs \
-	NSLayoutManager.cs \
-	NSLayoutStatus.cs \
-	NSLineBreakMode.cs \
-	NSLineCapStyle.cs \
-	NSLineJoinStyle.cs \
-	NSLineMovementDirection.cs \
-	NSLineSweepDirection.cs \
-	NSMatrix.cs \
-	NSMatrixMode.cs \
-	NSMenu.cs \
-	NSMenuItem.cs \
-	NSMenuItemCell.cs \
-	NSMenuView.cs \
-	NSMovie.cs \
-	NSMovieView.cs \
-	NSMultibyteGlyphPacking.cs \
-	NSMutableAttributedStringAppKitExtras.cs \
-	NSMutableParagraphStyle.cs \
-	NSNib.cs \
-	NSNibConnector.cs \
-	NSNibControlConnector.cs \
-	NSNibOutletConnector.cs \
-	NSObjectAppKitExtras.cs \
-	NSObjectController.cs \
-	NSOpenGLContext.cs \
-	NSOpenGLContextParameter.cs \
-	NSOpenGLPixelBuffer.cs \
-	NSOpenGLPixelFormat.cs \
-	NSOpenGLPixelFormatAttribute.cs \
-	NSOpenGLView.cs \
-	NSOpenPanel.cs \
-	NSOutlineView.cs \
-	NSPageLayout.cs \
-	NSPanel.cs \
-	NSParagraphStyle.cs \
-	NSPasteboard.cs \
-	NSPDFImageRep.cs \
-	NSPICTImageRep.cs \
-	NSPopUpArrowPosition.cs \
-	NSPopUpButton.cs \
-	NSPopUpButtonCell.cs \
-	NSPrinter.cs \
-	NSPrinterTableStatus.cs \
-	NSPrintInfo.cs \
-	NSPrintingOrientation.cs \
-	NSPrintingPageOrder.cs \
-	NSPrintingPaginationMode.cs \
-	NSPrintOperation.cs \
-	NSPrintPanel.cs \
-	NSProgressIndicator.cs \
-	NSProgressIndicatorStyle.cs \
-	NSProgressIndicatorThickness.cs \
-	NSQTMovieLoopMode.cs \
-	NSQuickDrawView.cs \
-	NSRequestUserAttentionType.cs \
-	NSResponder.cs \
-	NSRulerMarker.cs \
-	NSRulerOrientation.cs \
-	NSRulerView.cs \
-	NSSaveOperationType.cs \
-	NSSavePanel.cs \
-	NSScreen.cs \
-	NSScrollArrowPosition.cs \
-	NSScroller.cs \
-	NSScrollerArrow.cs \
-	NSScrollerPart.cs \
-	NSScrollView.cs \
-	NSSearchField.cs \
-	NSSearchFieldCell.cs \
-	NSSecureTextField.cs \
-	NSSecureTextFieldCell.cs \
-	NSSegmentedCell.cs \
-	NSSegmentedControl.cs \
-	NSSegmentSwitchTracking.cs \
-	NSSelectionAffinity.cs \
-	NSSelectionDirection.cs \
-	NSSelectionGranularity.cs \
-	NSShadow.cs \
-	NSSimpleHorizontalTypesetter.cs \
-	NSSlider.cs \
-	NSSliderCell.cs \
-	NSSliderType.cs \
-	NSSound.cs \
-	NSSpeechRecognizer.cs \
-	NSSpeechSynthesizer.cs \
-	NSSpellChecker.cs \
-	NSSplitView.cs \
-	NSStatusBar.cs \
-	NSStatusItem.cs \
-	NSStepper.cs \
-	NSStepperCell.cs \
-	NSStringAppKitExtras.cs \
-	NSTableColumn.cs \
-	NSTableHeaderCell.cs \
-	NSTableHeaderView.cs \
-	NSTableView.cs \
-	NSTableViewDropOperation.cs \
-	NSTabState.cs \
-	NSTabView.cs \
-	NSTabViewItem.cs \
-	NSTabViewType.cs \
-	NSText.cs \
-	NSTextAlignment.cs \
-	NSTextAttachment.cs \
-	NSTextAttachmentCell.cs \
-	NSTextContainer.cs \
-	NSTextField.cs \
-	NSTextFieldBezelStyle.cs \
-	NSTextFieldCell.cs \
-	NSTextStorage.cs \
-	NSTextTab.cs \
-	NSTextTabType.cs \
-	NSTextView.cs \
-	NSTickMarkPosition.cs \
-	NSTIFFCompression.cs \
-	NSTitlePosition.cs \
-	NSToolbar.cs \
-	NSToolbarDisplayMode.cs \
-	NSToolbarItem.cs \
-	NSToolbarSizeMode.cs \
-	NSTypesetter.cs \
-	NSTypesetterBehavior.cs \
-	NSTypeSetterGlyphInfo.cs \
-	NSURLAppKitExtras.cs \
-	NSUsableScrollerParts.cs \
-	NSUserDefaultsController.cs \
-	NSView.cs \
-	NSWindingRule.cs \
-	NSWindow.cs \
-	NSWindowButton.cs \
-	NSWindowController.cs \
-	NSWindowDepth.cs \
-	NSWindowMask.cs \
-	NSWindowOrderingMode.cs \
-	NSWorkspace.cs \
-	NSWritingDirection.cs 
+	*.cs
 
-build_sources = $(addprefix $(srcdir)/, $(sources)) AssemblyInfo.cs
+build_sources = $(addprefix $(srcdir)/, $(sources)) 
 
 $(ASSEMBLY): $(build_sources) cocoa-sharp.snk
 	$(CSC) /nowarn:0114,0108 /out:$(ASSEMBLY) /target:library $(references) $(build_sources)
