--- a/src/Apple.WebKit/Makefile.am
+++ b/src/Apple.WebKit/Makefile.am
@@ -1,52 +1,20 @@
 TARGET = $(ASSEMBLY)
 ASSEMBLY_NAME=Apple.WebKit
 ASSEMBLY=$(ASSEMBLY_NAME).dll
-CLEANFILES=$(ASSEMBLY) cocoa-sharp.snk
+CLEANFILES=$(ASSEMBLY) *.cs cocoa-sharp.snk
 DISTCLEANFILES=AssemblyInfo.cs
 noinst_DATA=$(ASSEMBLY) $(ASSEMBLY).config
 EXTRA_DIST= \
 	$(ASSEMBLY).config \
 	AssemblyInfo.cs.in \
-	IWebDocumentRepresentation.cs \
-	IWebDocumentSearching.cs \
-	IWebDocumentText.cs \
-	IWebDocumentView.cs \
-	IWebOpenPanelResultListener.cs \
-	IWebPolicyDecisionListener.cs \
-	NSObjectWebKitExtras.cs \
-	WebBackForwardList.cs \
-	WebDataSource.cs \
-	WebDownload.cs \
-	WebFrame.cs \
-	WebFrameView.cs \
-	WebHistory.cs \
-	WebHistoryItem.cs \
-	WebNavigationType.cs \
-	WebPreferences.cs \
-	WebView.cs
+	*.cs
 
 references = /r:../Apple.Foundation/Apple.Foundation.dll /r:../Apple.AppKit/Apple.AppKit.dll
 
 sources= \
-	IWebDocumentRepresentation.cs \
-	IWebDocumentSearching.cs \
-	IWebDocumentText.cs \
-	IWebDocumentView.cs \
-	IWebOpenPanelResultListener.cs \
-	IWebPolicyDecisionListener.cs \
-	NSObjectWebKitExtras.cs \
-	WebBackForwardList.cs \
-	WebDataSource.cs \
-	WebDownload.cs \
-	WebFrame.cs \
-	WebFrameView.cs \
-	WebHistory.cs \
-	WebHistoryItem.cs \
-	WebNavigationType.cs \
-	WebPreferences.cs \
-	WebView.cs
+	*.cs
 
-build_sources = $(addprefix $(srcdir)/, $(sources)) AssemblyInfo.cs
+build_sources = $(addprefix $(srcdir)/, $(sources)) 
 
 $(ASSEMBLY): $(build_sources) cocoa-sharp.snk
 	$(CSC) /nowarn:0114,0108 /out:$(ASSEMBLY) /target:library $(references) $(build_sources)
