2005-02-01  Geoff Norton  <gnorton@customerdna.com>
	* Makefile.am: Dont remove source on clean

svn path=/trunk/cocoa-sharp/; revision=39961

--- a/generator/Makefile.am
+++ b/generator/Makefile.am
@@ -13,8 +13,8 @@ EXTRA_DIST= \
 	generator-run.stamp \
 	generator.xml
 
-CLEANFILES=$(ASSEMBLY) $(EXTRA_DIST) 
-DISTCLEANFILES=$(EXTRA_DIST)
+CLEANFILES=$(ASSEMBLY) 
+DISTCLEANFILES=
 
 sources = \
 	header-gen/Main.cs \
