--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,1 +1,1 @@
-SUBDIRS=CocoaSharp.Loader CocoaSharp.Glue Apple.Foundation Apple.AppKit Apple.WebKit
+SUBDIRS=CocoaSharp.Glue Apple.Foundation Apple.AppKit Apple.WebKit
