2005-12-01  Geoff Norton  <gnorton@customerdna.com>
        * NEWS:
          AUTHORS:
          README:  Add to the build
        * configure.in: Dont generate AssemblyInfo.cs
        * autogen.sh: Default to using Mac's glibtoolize.  Generate 
          Makefiles properly.
        * Drop vim swap files 

svn path=/trunk/cocoa-sharp/; revision=53796

--- a/configure.in
+++ b/configure.in
@@ -59,6 +59,8 @@ AC_SUBST(OBJCFLAGS)
 AC_OUTPUT([
 Makefile
 src/Makefile
-src/Cocoa/AssemblyInfo.cs
-src/WebKit/AssemblyInfo.cs
+src/Cocoa/Makefile
+src/WebKit/Makefile
+doc/Makefile
+samples/Makefile
 ])
