2005-12-01  Geoff Norton  <gnorton@customerdna.com>
        * Makefile.am: Disable warnings for 0169
                                        

svn path=/trunk/cocoa-sharp/; revision=53798

--- a/src/Cocoa/Makefile.am
+++ b/src/Cocoa/Makefile.am
@@ -73,4 +73,4 @@ EXTRA_DIST=$(sources)
 build_sources = $(addprefix $(srcdir)/, $(sources))
 
 $(ASSEMBLY): $(build_sources)
-	$(MCS) /unsafe /out:$(ASSEMBLY) /target:library $(build_sources)
+	$(MCS) /nowarn:0169 /unsafe /out:$(ASSEMBLY) /target:library $(build_sources)
