2005-12-01  Geoff Norton  <gnorton@customerdna.com>
        * Makefile.am: Disable warnings for 0169
                                        

svn path=/trunk/cocoa-sharp/; revision=53799

--- a/src/WebKit/Makefile.am
+++ b/src/WebKit/Makefile.am
@@ -18,4 +18,4 @@ EXTRA_DIST=$(sources)
 build_sources = $(addprefix $(srcdir)/, $(sources))
 
 $(ASSEMBLY): $(build_soruces)
-	$(MCS) /out:$(ASSEMBLY) /r:../Cocoa/cocoa-sharp.dll /target:library $(build_sources)
+	$(MCS) /nowarn:0169 /out:$(ASSEMBLY) /r:../Cocoa/cocoa-sharp.dll /target:library $(build_sources)
