2005-12-14  Geoff Norton  <gnorton@customerdna.com>
	* Various autotools changes to allow 0.9.0 distribution 

svn path=/trunk/cocoa-sharp/; revision=54422

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -17,7 +17,13 @@ endif
 monodocdir=$(SOURCESDIR)
 monodocDATA=$(TARGETS)
 
+cocoa-sharp.source: assemble
+
+if ENABLE_MONODOC
 assemble: cocoa-sharp.zip cocoa-sharp.tree
+else
+assemble:
+endif
 
 cocoa-sharp.zip cocoa-sharp.tree: $(srcdir)/en/*/*.xml $(srcdir)/en/*.xml
 	$(MDASSEMBLER) --ecma $(srcdir)/en -o cocoa-sharp
@@ -35,8 +41,12 @@ update-delete: get-assemblies
 
 CLEANFILES=cocoa-sharp.zip cocoa-sharp.tree lib
 
+if ENABLE_MONODOC
 EXTRA_DIST= \
 	cocoa-sharp.source
+else
+EXTRA_DIST=
+endif
 
 NAMESPACES=Cocoa WebKit
 
@@ -47,6 +57,6 @@ dist-hook:
 		mkdir -p $(distdir)/en/$$i;			\
 		cp $(srcdir)/en/$$i/*.xml $(distdir)/en/$$i;	\
 	done
-#all:
+
+all: assemble
 #	mono /Library/Frameworks/Mono.framework/Versions/Current/lib/monodoc/monodocer.exe -assembly:../src/Cocoa/cocoa-sharp.dll -assembly:../src/WebKit/webkit-sharp.dll -path:. -name:"Cocoa#"
-#	mono /Library/Frameworks/Mono.framework/Versions/Current/lib/monodoc/assembler.exe --ecma . --out cocoa-sharp
