--- a/configure.in
+++ b/configure.in
@@ -5,6 +5,9 @@ AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE(cocoa-sharp, 0.9.0)
 AM_MAINTAINER_MODE
 
+PACKAGE_VERSION=cocoa-sharp
+AC_SUBST(PACKAGE_VERSION)
+
 API_VERSION=1.9.0.0
 AC_SUBST(API_VERSION)
 
@@ -60,7 +63,9 @@ AC_OUTPUT([
 Makefile
 src/Makefile
 src/Cocoa/Makefile
+src/Cocoa/cocoa-sharp.pc
 src/WebKit/Makefile
+src/WebKit/webkit-sharp.pc
 doc/Makefile
 samples/Makefile
 ])
