2005-12-15  Geoff Norton  <gnorton@customerdna.com>
        * Makefile.am: Fix typos
             

svn path=/trunk/cocoa-sharp/; revision=54499

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -8,14 +8,14 @@ UPDATER=$(MONODOCER) -path:en $(UPDATE_ASSEMBLIES)
 
 if ENABLE_MONODOC
 SOURCESDIR=$(prefix)/lib/monodoc/sources
-TARGETS=cocos-sharp.zip cocoa-sharp.tree cocoa-sharp.source
+TARGETS=cocoa-sharp.zip cocoa-sharp.tree cocoa-sharp.source
 else
 SOURCESDIR=$(datadir)
 TARGETS=
 endif
 
 monodocdir=$(SOURCESDIR)
-monodocDATA=$(TARGETS)
+monodoc_DATA=$(TARGETS)
 
 assemble: cocoa-sharp.zip cocoa-sharp.tree
 
