2006-01-07  Aaron Flynt  <aaron@aaronflynt.com> 	* Alert.cs: 		(.ctor): Added default calling Cocoa.Object for alloc. Added init. 		(BeginSheet): Added method. 		(AddButtonWithTitle): Added method. 		(InformativeText): Added property. 		(MessageTitle): Added property. 	* AlertHandler.cs: Added. 	* Application.cs: 		(Icon): Added property. 		(BeginSheet): Added method. 		(EndSheet): Added methods. 	* MutableArray.cs: Added .ctor public MutableArray (string [] stringArray). 	* Native.cs: 		(ToSelector): Added method. 		(sel_getUid): Added overload taking string argument. 	* OpenPanel.cs: Added. 	* OpenPanelHandler.cs: Added. 	* Panel.cs: Added. 	* SavePanel.cs: Added. 	* SavePanelHandler.cs: Added. 	* SheetHandler.cs: Added. 	* Window.cs: Addeded default .ctor for alloc and init of itself and 	derived classes.
svn path=/trunk/cocoa-sharp/; revision=55197

--- a/src/Cocoa/Makefile.am
+++ b/src/Cocoa/Makefile.am
@@ -11,6 +11,7 @@ sources= \
 	./ActionHandler.cs \
 	./Application.cs \
 	./Alert.cs \
+	./AlertHandler.cs \
 	./AlertStyle.cs \
 	./Array.cs \
 	./AssemblyInfo.cs \
@@ -53,7 +54,10 @@ sources= \
 	./ObjCMessaging.cs \
 	./Object.cs \
 	./OpenGLView.cs \
+	./OpenPanel.cs \
+	./OpenPanelHandler.cs \
 	./OutlineView.cs \
+	./Panel.cs \
 	./Pasteboard.cs \
 	./Point.cs \
 	./PopUpButton.cs \
@@ -62,8 +66,11 @@ sources= \
 	./RegisterAttribute.cs \
 	./Responder.cs \
 	./RunLoop.cs \
+	./SavePanel.cs \
+	./SavePanelHandler.cs \
 	./Screen.cs \
 	./SearchField.cs \
+	./SheetHandler.cs \
 	./ScrollView.cs \
 	./Size.cs \
 	./StackPadding.cs \
