Added ColorWell, Event, Font, an Cursor to makefile
svn path=/trunk/cocoa-sharp/; revision=74095

--- a/src/Cocoa/Makefile.am
+++ b/src/Cocoa/Makefile.am
@@ -38,7 +38,9 @@ sources= \
 	./Cell.cs \
 	./CellStateValue.cs \
 	./Color.cs \
+	./ColorWell.cs \
 	./Control.cs \
+	./Cursor.cs \
 	./CFArray.cs \
 	./CFString.cs \
 	./CFTimer.cs \
@@ -47,7 +49,9 @@ sources= \
 	./Drawer.cs \
 	./DragDestination.cs \
 	./DragOperation.cs \
+	./Event.cs \
 	./FileWrapper.cs \
+	./Font.cs \
 	./Image.cs \
 	./ImageView.cs \
 	./Menu.cs \
